# python-template

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Makefile  README.md  content.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  package-lock.json  package.json  pyproject.toml  search.html  searchindex.js
.github/workflows/: cd-deploy.yml  cd-release.yaml  ci-linter.yaml
_sources/: markdown-notebooks.ipynb
book/: _config.yml
docs/: CHANGELOG.md
src/: main.py
